[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liangmai"
version = "0.2.1"
description = "量脉金融数据平台 Python SDK — 封装105个金融数据接口，支持A股/指数/基金/龙虎榜/游资/早盘竞价"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Liangmai", email = "support@liangmai.pro"},
]
keywords = [
    "finance",
    "stock",
    "market-data",
    "china-a-shares",
    "liangmai",
    "量脉",
    "金融数据",
    "A股",
    "龙虎榜",
    "游资",
    "早盘竞价",
    "板块资金流",
    "异动监控",
    "沪深",
    "港股",
    "科创板",
    "指数",
    "K线",
    "财务数据",
    "Python SDK",
    "金融API",
    "股票数据",
    "量化交易",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "requests>=2.25",
]

[project.urls]
Homepage = "https://liangmai.pro"
Documentation = "https://liangmai.pro/docs"
Repository = "https://github.com/liangmai-sdk/liangmai"
Issues = "https://github.com/liangmai-sdk/liangmai/issues"

[tool.hatch.build.targets.wheel]
packages = ["liangmai"]